--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
@@ -5,9 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-<div id=bottom>
-    Here you are able to see the details of this crime.
-</div>
+
 <h1>Details</h1>
 
 <div>
@@ -72,5 +70,5 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Crime?.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
