--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
@@ -6,9 +6,7 @@
 }
 
 
-<div id=bottom>
-    Here you are able to edit this crime.
-</div>
+
 <h1>Edit</h1>
 
 <h4>Crime</h4>
@@ -74,7 +72,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
