--- a/FalknerCountyJuvenileCourt/Pages/Genders/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Genders/Delete.cshtml
@@ -5,9 +5,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<div id=bottom>
-    Here you are able to delete a type of gender, it will not be able to be assigned to a juvenile after being deleted.
-</div>
+
 
 <h1>Delete</h1>
 
@@ -26,6 +24,6 @@
     <form method="post">
         <input type="hidden" asp-for="Gender.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a id="Back_To_List" asp-page="./Index">Back to List</a>
     </form>
 </div>
