--- a/FalknerCountyJuvenileCourt/Pages/Genders/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Genders/Edit.cshtml
@@ -5,9 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<div id=bottom>
-    Here you are able to edit a type of gender.
-</div>
+
 
 <h1>Edit</h1>
 
@@ -31,7 +29,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
