--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
@@ -5,9 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<div id=bottom>
-    Here you are able to create a new juvenile to be assigned to a crime.
-</div>
+
 
 <h1>Create</h1>
 
@@ -64,7 +62,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a id="Back_To_List" asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
