--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Edit.cshtml
@@ -5,9 +5,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<div id=bottom>
-    Here you are able to edit a juvenile.
-</div>
 
 <h1>Edit</h1>
 
@@ -58,7 +55,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
