--- a/FalknerCountyJuvenileCourt/Pages/Offenses/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Offenses/Edit.cshtml
@@ -5,9 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<div id=bottom>
-    Here you are able to edit a offense.
-</div>
+
 <h1>Edit</h1>
 
 <h4>Offense</h4>
@@ -30,7 +28,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
