--- a/FalknerCountyJuvenileCourt/Pages/Schools/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Schools/Edit.cshtml
@@ -5,9 +5,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<div id=bottom>
-    Here you are able to edit what a school is called in the database.
-</div>
 
 <h1>Edit</h1>
 
@@ -31,7 +28,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
