--- a/FalknerCountyJuvenileCourt/wwwroot/css/site.css
+++ b/FalknerCountyJuvenileCourt/wwwroot/css/site.css
@@ -28,6 +28,9 @@ html {
   height: 50px;
   font-size: 27px;
 }
+#tableB:hover{
+  background-color: darkgoldenrod;
+}
 
 html {
   position: relative;
@@ -55,6 +58,12 @@ body {
   font-weight: 400;
   line-height: 1.5;
   padding: 0.375rem 0.75rem;
+  transition-duration: 0.2s;
+}
+#Cbtn:hover{
+  background-color: darkgoldenrod; 
+  border: black;
+  outline: 2px solid black;
 }
 #EDbtn{
   color: #fff;
@@ -70,6 +79,12 @@ body {
   font-weight: 400;
   line-height: 1.25;
   padding: 0.2rem 0.3rem;
+  transition-duration: 0.2s;
+}
+#EDbtn:hover{
+  background-color: darkgoldenrod; 
+  border: black;
+  outline: 2px solid black;
 }
 #bottom {
   position: absolute;
@@ -81,8 +96,8 @@ body {
   line-height: 43px;
 }
 input{
-  color: #fff;
-  background-color: black;
+  color: black;
+  background-color: white;
   border-color: black;
   outline: 2px solid black;
   border-radius: .25rem;
@@ -94,4 +109,40 @@ input{
   font-weight: 400;
   line-height: 1.5;
   padding: 0.375rem 0.75rem;
+}
+input[type=submit] {
+  background-color: black;
+  color: white;
+  border-color: black;
+  outline: 2px solid black;
+  transition-duration: 0.2s;
+}
+input[type=submit]:hover {
+  background-color: darkgoldenrod; 
+  border: black;
+  outline: 2px solid black;
+}
+#Back_To_List{
+  color: black;
+}
+#Back_To_List:hover{
+  color:darkgoldenrod;
+}
+#NP{
+  background-color: black;
+  color: white;
+  border-color: black;
+  outline: 2px solid black;
+  transition-duration: 0.2s;
+}
+#NP:hover{
+  background-color: darkgoldenrod; 
+  border: black;
+  outline: 2px solid black;
+}
+input[type=checkbox] {
+  width: 15px; /* Set the desired width */
+  height: 15px; /* Set the desired height */
+  border-radius: 0;
+  padding-right: 5px;
 }
