--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -22,6 +22,10 @@
         <h1>SAVRY Levels for Detained Youth Upon Intake</h1>
         <canvas id="RiskPieChart" width="400" height="400"></canvas>
     </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>School Related Arrests</h1>
+        <canvas id="SchoolPieChart" width="400" height="400"></canvas>
+    </div>
  
  
 <script>
@@ -236,7 +240,7 @@
  
                 console.log('Received RiskData:', RiskData);
  
-                var RiskLabels = RiskData.map(item => item.riskCounts);
+                var RiskLabels = RiskData.map(item => item.riskCount);
                 var RiskValues = RiskData.map(item => item.count);
  
                 // Use predefined colors for the first 5 colors
@@ -250,6 +254,53 @@
                         labels: RiskLabels,
                         datasets: [{
                             data: RiskValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+ 
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=SchoolDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            //console.log("Raw response data:", await response.text());
+            if (response.ok) {
+                var SchoolData = await response.json();
+ 
+                console.log('Received SchoolData:', SchoolData);
+ 
+                var SchoolLabels = SchoolData.map(item => item.schoolCount);
+                var SchoolValues = SchoolData.map(item => item.count);
+ 
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(SchoolLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, SchoolLabels.length - predefinedColors.length)));
+ 
+                var ctx = document.getElementById('SchoolPieChart').getContext('2d');
+                var SchoolPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: SchoolLabels,
+                        datasets: [{
+                            data: SchoolValues,
                             backgroundColor: backgroundColors
                         }]
                     },
