styling, everything besides nav bar

--- a/FalknerCountyJuvenileCourt/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FalknerCountyJuvenileCourt/Areas/Identity/Pages/Account/Login.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div>
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a class="forgot" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                 </div>
             </form>
