--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
@@ -69,6 +69,6 @@
    </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Crime?.ID">Edit</a> |
+    <a id="Back_To_List" asp-page="./Edit" asp-route-id="@Model.Crime?.ID">Edit</a> |
     <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
