--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Details.cshtml
@@ -78,6 +78,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Juvenile?.ID">Edit</a> |
+    <a id="Back_To_List" asp-page="./Edit" asp-route-id="@Model.Juvenile?.ID">Edit</a> |
     <a id="Back_To_List" asp-page="./Index">Back to List</a>
 </div>
