--- a/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml.css
+++ b/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml.css
@@ -9,6 +9,7 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  background-color: rgba(58, 58, 41, 0.9);
 }
 
 a {
