--- a/FalknerCountyJuvenileCourt/wwwroot/css/site.css
+++ b/FalknerCountyJuvenileCourt/wwwroot/css/site.css
@@ -110,17 +110,18 @@ input{
   line-height: 1.5;
   padding: 0.375rem 0.75rem;
 }
-input[type=submit] {
+input[type=submit], #nav-link {
   background-color: black;
   color: white;
   border-color: black;
   outline: 2px solid black;
   transition-duration: 0.2s;
 }
-input[type=submit]:hover {
+input[type=submit]:hover, #nav-link:hover {
   background-color: darkgoldenrod; 
   border: black;
   outline: 2px solid black;
+  color: white
 }
 #Back_To_List{
   color: black;
@@ -170,4 +171,28 @@ input[type=checkbox] {
 }
 .header{
   background-color: rgba(58, 58, 41, 0.9);
+  outline:2px solid black; ;
+  color: white;
+}
+#here{
+  background-color: rgba(58, 58, 41, 0.9);
+}
+#nav-link {
+  background-color: black;
+  color: white;
+  border-color: black;
+  outline: 2px solid black;
+  transition-duration: 0.2s;
+}
+#nav-link:hover {
+  background-color: darkgoldenrod; 
+  border: black;
+  outline: 2px solid black;
+  color: white
+}
+#Priv{
+  color:gray;
+}
+#Priv:hover{
+  color: darkgoldenrod;
 }
