--- a/FalknerCountyJuvenileCourt/wwwroot/css/site.css
+++ b/FalknerCountyJuvenileCourt/wwwroot/css/site.css
@@ -110,14 +110,14 @@ input{
   line-height: 1.5;
   padding: 0.375rem 0.75rem;
 }
-input[type=submit], #nav-link {
+input[type=submit] {
   background-color: black;
   color: white;
   border-color: black;
   outline: 2px solid black;
   transition-duration: 0.2s;
 }
-input[type=submit]:hover, #nav-link:hover {
+input[type=submit]:hover {
   background-color: darkgoldenrod; 
   border: black;
   outline: 2px solid black;
@@ -177,14 +177,14 @@ input[type=checkbox] {
 #here{
   background-color: rgba(58, 58, 41, 0.9);
 }
-#nav-link {
+#nav-link, .nav-item {
   background-color: black;
   color: white;
   border-color: black;
   outline: 2px solid black;
   transition-duration: 0.2s;
 }
-#nav-link:hover {
+#nav-link:hover, .nav-item:hover {
   background-color: darkgoldenrod; 
   border: black;
   outline: 2px solid black;
