--- a/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 
                         }
                         <li class="nav-item">
-                            <a id="nav-link" class="nav-link" asp-area="" asp-page="/Report/Index">Report</a>
+                            <a id="nav-link" class="nav-link" asp-area="" asp-page="/Report">Report</a>
 
                         </li>
                         <li class="nav-item">
