--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -26,6 +26,11 @@
         <h1>School Related Arrests</h1>
         <canvas id="SchoolPieChart" width="400" height="400"></canvas>
     </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>Prosecutor Filing Decisions</h1>
+        <canvas id="FilingDecisionPieChart" width="400" height="400"></canvas>
+    </div>
+    
  
  
 <script>
@@ -301,6 +306,53 @@
                         labels: SchoolLabels,
                         datasets: [{
                             data: SchoolValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+ 
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=FilingDecisionDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            //console.log("Raw response data:", await response.text());
+            if (response.ok) {
+                var FilingDecisionData = await response.json();
+ 
+                console.log('Received FilingDecisionData:', FilingDecisionData);
+ 
+                var FilingDecisionLabels = FilingDecisionData.map(item => item.filingDecsionCounts);
+                var FilingDecisionValues = FilingDecisionData.map(item => item.count);
+ 
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(FilingDecisionLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, FilingDecisionLabels.length - predefinedColors.length)));
+ 
+                var ctx = document.getElementById('FilingDecisionPieChart').getContext('2d');
+                var FilingDecisionPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: FilingDecisionLabels,
+                        datasets: [{
+                            data: FilingDecisionValues,
                             backgroundColor: backgroundColors
                         }]
                     },
