--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -2,10 +2,7 @@
 @model ReportModel
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
    
-   <div style="width: 400px; height: 400px;">
-        <h1>Race Distribution of Juveniles</h1>
-        <canvas id="racePieChart" width="400" height="400"></canvas>
-    </div>
+   
    <div style="width: 400px; height: 400px;">
         <h1>Person arrested by Gender</h1>
         <canvas id="genderPieChart" width="400" height="400"></canvas>
@@ -30,6 +27,18 @@
         <h1>Prosecutor Filing Decisions</h1>
         <canvas id="FilingDecisionPieChart" width="400" height="400"></canvas>
     </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>Admissions by Race</h1>
+        <canvas id="adracePieChart" width="400" height="400"></canvas>
+    </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>Admission by Gender</h1>
+        <canvas id="adgenderPieChart" width="400" height="400"></canvas>
+    </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>Admission by Age</h1>
+        <canvas id="adagebarChart" width="400" height="400"></canvas>
+    </div>
     
  
  
@@ -42,53 +51,6 @@
         'rgba(169, 169, 169, 0.8)', // Grey
         'rgba(0, 128, 0, 0.8)'      // Green
         ];
-    document.addEventListener('DOMContentLoaded', async function () {
-        try {
-            var response = await fetch('/Report?handler=RaceDistributionData', {
-                headers: {
-                    'Accept': 'application/json'
-                }
-            });
-            //console.log("Raw response data:", await response.text());
-            if (response.ok) {
-                var raceData = await response.json();
- 
-                console.log('Received raceData:', raceData);
- 
-                var raceLabels = raceData.map(item => item.race);
-                var raceValues = raceData.map(item => item.count);
- 
-                // Use predefined colors for the first 5 colors
-                var backgroundColors = predefinedColors.slice(0, Math.min(raceLabels.length, predefinedColors.length));
-                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, raceLabels.length - predefinedColors.length)));
- 
-                var ctx = document.getElementById('racePieChart').getContext('2d');
-                var racePieChart = new Chart(ctx, {
-                    type: 'pie',
-                    data: {
-                        labels: raceLabels,
-                        datasets: [{
-                            data: raceValues,
-                            backgroundColor: backgroundColors
-                        }]
-                    },
-                    options: {
-                        responsive: true,
-                        maintainAspectRatio: false,
-                        legend: {
-                            position: 'top',
-                        }
-                    }
-                });
-            } else {
-                console.error("Error fetching data. Status:", response.status);
-                console.log("Raw response data:", await response.text());
-            }
-        } catch (error) {
-            console.error("Error fetching or parsing data:", error);
- 
-        }
-    });
 
     document.addEventListener('DOMContentLoaded', async function () {
         try {
@@ -371,6 +333,145 @@
         } catch (error) {
             console.error("Error fetching or parsing data:", error);
  
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=RaceDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            //console.log("Raw response data:", await response.text());
+            if (response.ok) {
+                var raceData = await response.json();
+ 
+                console.log('Received raceData:', raceData);
+ 
+                var raceLabels = raceData.map(item => item.race);
+                var raceValues = raceData.map(item => item.count);
+ 
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(raceLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, raceLabels.length - predefinedColors.length)));
+ 
+                var ctx = document.getElementById('adracePieChart').getContext('2d');
+                var racePieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: raceLabels,
+                        datasets: [{
+                            data: raceValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+ 
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=AdGenderDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            //console.log("Raw response data:", await response.text());
+            if (response.ok) {
+                var genderData = await response.json();
+ 
+                console.log('Received genderData:', genderData);
+ 
+                var genderLabels = genderData.map(item => item.gender);
+                var genderValues = genderData.map(item => item.count);
+ 
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(genderLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, genderLabels.length - predefinedColors.length)));
+ 
+                var ctx = document.getElementById('adgenderPieChart').getContext('2d');
+                var genderPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: genderLabels,
+                        datasets: [{
+                            data: genderValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+ 
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=AdAgeDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            if (response.ok) {
+                var ageData = await response.json();
+
+                console.log('Received ageData:', ageData);
+
+                var ageLabels = ageData.map(item => item.ageGroups);
+                var ageValues = ageData.map(item => item.count);
+
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(ageLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, ageLabels.length - predefinedColors.length)));
+
+                var ctx = document.getElementById('adagebarChart').getContext('2d');
+                var agePieChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: ageLabels,
+                        datasets: [{
+                            data: ageValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
         }
     });
  
