doesnt show undefined as header for bar chart anymore

--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -89,8 +89,9 @@
                     data: {
                         labels: raceLabels,
                         datasets: [{
+                            label: 'Arrests by race',
                             data: raceValues,
-                            backgroundColor: backgroundColors
+                            backgroundColor: backgroundColors,
                         }]
                     },
                     options: {
@@ -512,6 +513,7 @@
                     data: {
                         labels: ageLabels,
                         datasets: [{
+                            label: 'Arrests by ages',
                             data: ageValues,
                             backgroundColor: backgroundColors
                         }]
