Fixed Create, other modifications
Edit is still not working for juveniles and crimes

--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Create.cshtml
@@ -16,9 +16,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Juvenile.ID" class="control-label"></label>
-                <input asp-for="Juvenile.ID" class="form-control" />
-                <span asp-validation-for="Juvenile.ID" class="text-danger"></span>
+                <label asp-for="Juvenile.FaulknerCountyIdentification" class="control-label"></label>
+                <input asp-for="Juvenile.FaulknerCountyIdentification" class="form-control" />
+                <span asp-validation-for="Juvenile.FaulknerCountyIdentification" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Juvenile.Age" class="control-label"></label>
