--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Delete.cshtml
@@ -15,10 +15,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Juvenile.ID)
+            @Html.DisplayNameFor(model => model.Juvenile.FaulknerCountyIdentification)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Juvenile.ID)
+            @Html.DisplayFor(model => model.Juvenile.FaulknerCountyIdentification)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Juvenile.Age)
