--- a/FalknerCountyJuvenileCourt/Pages/Schools/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Schools/Edit.cshtml
@@ -21,7 +21,7 @@
                 <span asp-validation-for="School.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input id="NP" type="Submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
