--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -31,11 +31,7 @@
             <canvas id="agePieChart" width="400" height="400"></canvas>
         </div>
         <!-- Text 3 -->
-        <div style= "flex 1; font-size: 24px; margin-top: 150px;">
-            <p> 10-12 years of age: 30<br>
-                13-15 years of age: 153<br>
-                16-18 years of age: 98
-            </p>
+        <div id="ageText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
     <br>
@@ -52,11 +48,7 @@
             <canvas id="IntakeDecisionPieChart" width="400" height="400"></canvas>
         </div>
         <!-- Text 4 -->
-        <div style= "flex 1; font-size: 24px; margin-top: 150px;">
-            <p> Cite and Release: 206<br>
-                Detention Alternative: 15<br>
-                Detention: 60
-            </p>
+         <div id="intakeText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
     <br>
@@ -230,6 +222,11 @@
 
                 var ageLabels = ageData.map(item => item.ageGroups);
                 var ageValues = ageData.map(item => item.count);
+
+                var ageText = document.getElementById('ageText');
+                ageText.innerHTML = ageData.map(item => `${item.ageGroups}: ${item.count} (${((item.count / ageData.reduce((acc, curr) => acc + curr.count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${ageData.reduce((acc, curr) => acc + curr.count, 0)}`;
+
 
                 // Use predefined colors for the first 5 colors
                 var backgroundColors = predefinedColors.slice(0, Math.min(ageLabels.length, predefinedColors.length));
