--- a/FalknerCountyJuvenileCourt/Pages/Privacy.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This page was made by Hendrix College students for the Faulkner County Juvenile Court</p>
