--- a/FalknerCountyJuvenileCourt/Pages/Juveniles/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Juveniles/Edit.cshtml
@@ -17,8 +17,10 @@
             <input type="hidden" asp-for="Juvenile.ID" />
             <div class="form-group">
                 <label asp-for="Juvenile.FaulknerCountyIdentification" class="control-label"></label>
-                <div>@Html.DisplayFor(model => model.Juvenile.FaulknerCountyIdentification)</div>
+                <input asp-for="Juvenile.FaulknerCountyIdentification" class="form-control"/>
+                <span asp-validation-for="Juvenile.FaulknerCountyIdentification" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Juvenile.Age" class="control-label"></label>
                 <input asp-for="Juvenile.Age" class="form-control" />
