--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -87,6 +87,10 @@
         <h1>Admission by Age</h1>
         <canvas id="adagebarChart" width="400" height="400"></canvas>
     </div>
+    <div style="width: 400px; height: 400px; margin-bottom: 40px;">
+        <h1>School and Non-School Related Delinquency Petitions</h1>
+        <canvas id="DelinquencyGenderPieChart" width="400" height="400"></canvas>
+    </div>
  
  
 <script>
@@ -573,6 +577,51 @@
                         datasets: [{
                             label: 'Arrests by ages',
                             data: ageValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=DelinquencyGenderDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            if (response.ok) {
+                var delinquencyData = await response.json();
+
+                console.log('Received DelinquencyData:', delinquencyData);
+
+                var delinquencyLabels = delinquencyData.map(item => item.delinquencygender);
+                var delinquencyValues = delinquencyData.map(item => item.count);
+
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(delinquencyLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, delinquencyLabels.length - predefinedColors.length)));
+
+                var ctx = document.getElementById('DelinquencyGenderPieChart').getContext('2d');
+                var delinquencyPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: delinquencyLabels,
+                        datasets: [{
+                            data: delinquencyValues,
                             backgroundColor: backgroundColors
                         }]
                     },
