--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Index.cshtml
@@ -51,7 +51,7 @@
                 @Html.DisplayFor(modelItem => item.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Juvenile.ID)
+                @Html.DisplayFor(modelItem => item.Juvenile.FaulknerCountyIdentification)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Offense.Name)
