--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Details.cshtml
@@ -22,7 +22,7 @@
          @Html.DisplayNameFor(model => model.Crime.Juvenile)
       </dt>
       <dd class="col-sm-10">
-         @Html.DisplayFor(model => model.Crime.Juvenile.ID)
+         @Html.DisplayFor(model => model.Crime.Juvenile.FaulknerCountyIdentification)
       </dd>
       <dt class="col-sm-2">
          @Html.DisplayNameFor(model => model.Crime.Offense)
