--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Edit.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Crime.Juvenile" class="control-label"></label>
-                <div>@Html.DisplayFor(model => model.Crime.Juvenile.ID)</div>
+                <div>@Html.DisplayFor(model => model.Crime.Juvenile.FaulknerCountyIdentification)</div>
             </div>
             <div class="form-group">
                 <label asp-for="Crime.Offense" class="control-label"></label>
